--- a/greencube-io117-statistics-dxcc-t.html
+++ b/greencube-io117-statistics-dxcc-t.html
@@ -129,7 +129,7 @@
 
         .chart-panel canvas {
             width: 100% !important;
-            height: auto !important;
+            height: 300px !important;
         }
 
         /* Table styling */
